# notes-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE-OTHERS  README.md
include/notes_client/: cli_input.h  client.h  exception.h  index.h  librarian.h  note.h  note_formatter.h  out_formatter.h  param_maker.h
src/: CMakeLists.txt  main.cpp
src/notes_client/: CMakeLists.txt  cli_input.cpp  client.cpp  exception.cpp  librarian.cpp  out_formatter.cpp  param_maker.cpp
